Added FontAwesome and other changes
Ädded first Story component and fixed problems in Storybook for Tailwind

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
       "files": ["*.stories.@(ts|tsx|js|jsx|mjs|cjs)"]
     }
   ],
+  "ignorePatterns": ["!.storybook"],
   "rules": {
     "@typescript-eslint/no-unused-vars": "error",
     "@typescript-eslint/no-explicit-any": "error"
