Added first config for PWA and first changes at Me Page

--- a/.gitignore
+++ b/.gitignore
@@ -34,5 +34,13 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
+# Auto Generated PWA files
+**/public/sw.js
+**/public/workbox-*.js
+**/public/worker-*.js
+**/public/sw.js.map
+**/public/workbox-*.js.map
+**/public/worker-*.js.map
+
 # temporal, just for testing!
 src/stories
