--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "autoprefixer": "10.4.15",
     "framer-motion": "^10.16.4",
     "next": "13.4.19",
+    "next-pwa": "^5.6.0",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sharp": "^0.32.5",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
