--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,30 +3,34 @@
   "background_color": "#145374",
   "display": "standalone",
   "scope": "/",
-  "start_url": "/home#",
-  "name": "pr0mming",
-  "short_name": "pr0mming",
+  "start_url": "/",
+  "name": "@pr0mming Portfolio",
+  "short_name": "@pr0mming Portfolio",
   "description": "This is the portfolio of @pr0mming :)",
   "icons": [
     {
       "src": "/icon-192x192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "/icon-256x256.png",
       "sizes": "256x256",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "/icon-384x384.png",
       "sizes": "384x384",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "/icon-512x512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
