--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@storybook/react": "^7.3.2",
     "@storybook/testing-library": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
+    "cssnano": "^6.0.1",
     "eslint": "^8.48.0",
     "eslint-config-next": "^13.4.19",
     "eslint-config-prettier": "^9.0.0",
