--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "cssnano": "^6.0.1",
     "framer-motion": "^10.16.4",
     "next": "13.4.19",
     "next-pwa": "^5.6.0",
@@ -28,7 +29,8 @@
     "react-dom": "18.2.0",
     "sharp": "^0.32.5",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.3.2",
@@ -41,7 +43,6 @@
     "@storybook/react": "^7.3.2",
     "@storybook/testing-library": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
-    "cssnano": "^6.0.1",
     "eslint": "^8.48.0",
     "eslint-config-next": "^13.4.19",
     "eslint-config-prettier": "^9.0.0",
