--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "autoprefixer": "10.4.15",
     "cssnano": "^6.0.1",
     "framer-motion": "^10.16.4",
-    "next": "13.4.19",
+    "next": "^13.5.1",
     "next-pwa": "^5.6.0",
     "postcss": "8.4.28",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sharp": "^0.32.5",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
@@ -44,7 +44,7 @@
     "@storybook/testing-library": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "eslint": "^8.48.0",
-    "eslint-config-next": "^13.4.19",
+    "eslint-config-next": "^13.5.1",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-storybook": "^0.6.13",
     "husky": "^8.0.3",
