--- a/package.json
+++ b/package.json
@@ -19,38 +19,43 @@
     "@types/node": "20.5.3",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "accept-language": "^3.0.18",
     "autoprefixer": "10.4.15",
     "cssnano": "^6.0.1",
     "framer-motion": "^10.16.4",
-    "next": "^13.5.3",
+    "i18next-browser-languagedetector": "^7.1.0",
+    "i18next-resources-to-backend": "^1.1.4",
+    "next": "^13.5.4",
     "next-pwa": "^5.6.0",
     "postcss": "8.4.28",
     "react": "^18.2.0",
+    "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.2.2",
     "sharp": "^0.32.6",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
-    "zustand": "^4.4.1"
+    "zustand": "^4.4.3"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.4.5",
-    "@storybook/addon-interactions": "^7.4.5",
-    "@storybook/addon-links": "^7.4.5",
+    "@storybook/addon-essentials": "^7.4.6",
+    "@storybook/addon-interactions": "^7.4.6",
+    "@storybook/addon-links": "^7.4.6",
     "@storybook/addon-onboarding": "^1.0.8",
     "@storybook/addon-styling": "^1.3.7",
     "@storybook/blocks": "^7.3.2",
-    "@storybook/nextjs": "^7.4.5",
+    "@storybook/nextjs": "^7.4.6",
     "@storybook/react": "^7.3.2",
-    "@storybook/testing-library": "^0.2.1",
-    "@typescript-eslint/eslint-plugin": "^6.7.3",
+    "@storybook/testing-library": "^0.2.2",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
     "eslint": "^8.50.0",
-    "eslint-config-next": "^13.5.3",
+    "eslint-config-next": "^13.5.4",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-storybook": "^0.6.14",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
     "prettier": "^3.0.3",
-    "storybook": "^7.4.5"
+    "storybook": "^7.4.6"
   },
   "resolutions": {
     "webpack": "^5"
