Add visual improvements, fix Storybook i18next config and add .env file

--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
     "prettier": "^3.0.3",
-    "storybook": "^7.5.1"
+    "storybook": "^7.5.1",
+    "storybook-react-i18next": "^2.0.9"
   },
   "resolutions": {
     "webpack": "^5"
