--- a/package.json
+++ b/package.json
@@ -1,63 +1,56 @@
 {
-  "name": "bluish-portfolio",
-  "version": "2.0",
-  "description": "The 'Bluish' project is my first portfolio version :)",
+  "name": "portfolio-migration",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint",
+    "prepare": "husky",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
-    "prepare": "husky install"
+    "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.4.2",
-    "@fortawesome/free-solid-svg-icons": "^6.4.2",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@types/node": "20.5.3",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "accept-language": "^3.0.18",
-    "autoprefixer": "10.4.15",
-    "cssnano": "^6.0.1",
-    "framer-motion": "^10.18.0",
-    "i18next-browser-languagedetector": "^7.2.0",
-    "i18next-resources-to-backend": "^1.2.0",
-    "next": "^13.5.6",
-    "next-pwa": "^5.6.0",
-    "postcss": "8.4.28",
-    "react": "^18.2.0",
-    "react-cookie": "^6.1.3",
-    "react-dom": "^18.2.0",
-    "react-i18next": "^13.5.0",
-    "sharp": "^0.32.6",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.1.6",
-    "zustand": "^4.5.2"
+    "@fortawesome/fontawesome-svg-core": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@fortawesome/react-fontawesome": "^3.1.1",
+    "accept-language": "^3.0.20",
+    "cookies-next": "^6.1.1",
+    "i18next": "^25.7.3",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-resources-to-backend": "^1.2.1",
+    "motion": "^12.23.26",
+    "next": "16.1.1",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
+    "react-i18next": "^16.5.0",
+    "sharp": "^0.34.5",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.5.3",
-    "@storybook/addon-interactions": "^7.5.3",
-    "@storybook/addon-links": "^7.5.3",
-    "@storybook/addon-onboarding": "^1.0.8",
-    "@storybook/addon-styling": "^1.3.7",
-    "@storybook/blocks": "^7.3.2",
-    "@storybook/nextjs": "^7.5.3",
-    "@storybook/react": "^7.3.2",
-    "@storybook/testing-library": "^0.2.2",
-    "@typescript-eslint/eslint-plugin": "^6.11.0",
-    "eslint": "^8.54.0",
-    "eslint-config-next": "^13.5.6",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-storybook": "^0.6.15",
-    "husky": "^8.0.3",
-    "lint-staged": "^14.0.1",
-    "prettier": "^3.1.0",
-    "storybook": "^7.5.3",
-    "storybook-react-i18next": "^2.0.9"
-  },
-  "resolutions": {
-    "webpack": "^5"
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "16.1.1",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7",
+    "prettier": "3.7.4",
+    "tailwindcss": "^4",
+    "typescript": "^5",
+    "storybook": "^10.1.11",
+    "@storybook/nextjs-vite": "^10.1.11",
+    "@chromatic-com/storybook": "^4.1.3",
+    "@storybook/addon-vitest": "^10.1.11",
+    "@storybook/addon-a11y": "^10.1.11",
+    "@storybook/addon-docs": "^10.1.11",
+    "vite": "^7.3.0",
+    "eslint-plugin-storybook": "^10.1.11",
+    "vitest": "^4.0.16",
+    "playwright": "^1.57.0",
+    "@vitest/browser-playwright": "^4.0.16",
+    "@vitest/coverage-v8": "^4.0.16"
   }
 }
